--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1> Welcome to git session</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto nam quam maxime rerum repellendus quis amet numquam autem corporis natus non fugiat, ea impedit ex nesciunt molestiae repudiandae dolores vel.</p>
 </body>
 </html>
